// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Common] BookmarksProfile Should match snapshot and display the login form 1`] = `
<div>
  <div
    class="BookmarksProfileWrapperClassName"
  >
    <div
      class="containerClassName"
    >
      <h2
        class="TitleClassName"
      >
        Merkliste
      </h2>
    </div>
    <div
      class="LoginWrapperClassName containerClassName"
    >
      <form
        data-testid="login-form"
      />
    </div>
  </div>
</div>
`;

exports[`[Common] BookmarksProfile Should match snapshot if isAuthenticated is true 1`] = `
<div>
  <div
    class="BookmarksProfileWrapperClassName"
  >
    <div
      class="containerClassName"
    >
      <h2
        class="TitleClassName"
      >
        Merkliste
      </h2>
    </div>
    <div
      class="containerClassName"
    >
      <div
        data-testid="loading"
      >
        loading...
      </div>
    </div>
  </div>
</div>
`;
